--- a/editor/templates/edit.html
+++ b/editor/templates/edit.html
@@ -1,65 +1,92 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <section class="py-5">
-    <div class="container">
-        <div class="row removable">
-            <div class="col-md-8 ms-auto me-auto text-center">
-                <h3>Products</h3>
-            </div>
+  <div class="container">
+    <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+      <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
+        <div class="row">
+          <div class="col-6 d-flex align-items-center">
+            <h6 class="text-white text-capitalize ps-3">Live Products</h6>
+          </div>
+          <div class="col-6 text-end" style="right: 10px; position: relative">
+            <button type="button" class="btn bg-gradient-dark mb-0" data-toggle="modal" data-target="#newProductModal">
+              <i class="material-icons opacity-10">add</i> New Product
+            </button>
+          </div>
         </div>
-        <div class="row mt-lg-5 mt-4 removable">
-            <div class="col-lg-4 col-md-6 mb-5">
-                <div class="card mb-4" data-animation="true">
-                    <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-                        <a class="d-block text-center blur-shadow-image" style="width: auto; height:auto;">
-                            <img src="" alt="img-blur-shadow" class="img-fluid shadow border-radius-lg">
-                        </a>
-                        <div class="colored-shadow" style="background-image: url('');"></div>
-                    </div>
-                    <div class="card-body text-center">
-                        <div class="d-flex mt-n6 mx-auto">
-                            <a class="btn btn-link text-primary ms-auto border-0" onclick="delete_request()" type="button" data-bs-toggle="tooltip" data-bs-placement="bottom" data-original-title="" title="">
-                                <i class="material-icons opacity-10">delete</i>
-                            </a>
-                            <a class="btn btn-link text-info me-auto border-0" onclick="approve_request()" data-bs-toggle="tooltip" data-bs-placement="bottom" data-original-title="" title="">
-                                <i class="material-icons opacity-10">check</i>
-                            </a>
-                        </div>
-                        <h5 class="font-weight-normal mt-3">
-                            <a href="javascript:;">name</a>
-                        </h5>
-                        <p class="mb-0">
-                            name  
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+    <div class="row mt-lg-5 mt-4 removable">
+      {% for p in products %}
+      <div class="col-lg-4 col-md-6 mb-5">
+        <div class="card mb-4" data-animation="true">
+          <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+            <a class="d-block text-center blur-shadow-image" style="width: auto; height: auto">
+              <img src="" alt="img-blur-shadow" class="img-fluid shadow border-radius-lg" />
+            </a>
+            <div class="colored-shadow" style="background-image: url('')"></div>
+          </div>
+          <div class="card-body text-center">
+            <div class="d-flex mt-n6 mx-auto">
+              <a class="btn btn-link text-primary ms-auto border-0" type="button" data-bs-toggle="tooltip" data-bs-placement="bottom" data-original-title="" title="">
+                <i class="material-icons opacity-10">delete</i>
+              </a>
+            </div>
+            <h5 class="font-weight-normal mt-3">
+              <a href="javascript:;">{{ p.name }}</a>
+            </h5>
+            <p class="mb-0">
+              {% if p.in_stock %}
+                In stock
+              {% else %}
+              Not in stock
+              {% endif %}
+            </p>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
 </section>
-<script>
-	function delete_request(id){
-        let c = confirm("Are you sure you want to DELETE this request (cannot be undone)")
-        if (!c) return
-		fetch("/discard-photo/"+id)
-        .then((res) => res.json())
-        .then((data) => {
-            if (data == "ok") remove_photo(id)
-        });
-	}
-	function approve_request(id){
-        let c = confirm("Are you sure you want to ACCEPT this request (cannot be undone)")
-        if (!c) return
-        fetch("/accept-photo/"+id)
-        .then((res) => res.json())
-        .then((data) => {
-            if (data == "ok") remove_photo(id)
-            }
-        );
-	}
-    function remove_photo(id) {
-        $('#'+id).remove()
-    }
-</script>
+<!-- The Modal -->
+<div class="modal fade" id="newProductModal">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">New Product</h4>
+      </div>
+      <!-- Modal body -->
+      <div class="modal-body">
+        <div class="card-body">
+          <form role="form" class="text-start" method="post" enctype="multipart/form-data" action="{% url 'create_product' %}" id="create_product">
+            {% csrf_token %}
+            <div class="input-group input-group-outline mb-3">
+              <label class="form-label">Name</label>
+              <input type="text" class="form-control" name="name" required />
+            </div>
+            <div class="form-check form-switch ps-0">
+              <input class="form-check-input ms-auto" type="checkbox" name="in_stock" id="inStockSwitchCheckDefault" checked />
+              <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0" for="inStockSwitchCheckDefault">In stock?</label>
+            </div>
+            <div class="form-check form-switch ps-0">
+              <input class="form-check-input ms-auto" type="checkbox" name="in_draft" id="draftSwitchCheckDefault" />
+              <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0" for="draftSwitchCheckDefault">Save to draft</label>
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Create</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
