--- a/editor/templates/base.html
+++ b/editor/templates/base.html
@@ -56,7 +56,7 @@
           </li>
           <hr />
           <li class="nav-item">
-            <a class="nav-link text-white" href="">
+            <a class="nav-link text-white" href="{% url 'logout' %}">
               <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                 <i class="material-icons opacity-10">logout</i>
               </div>
