White Noise Middleware

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'style.css' %}" />
-    <link rel="stylesheet" href="{% static 'main.js' %}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="icon" href="{% static 'images/img/bag1.jpg' %}" />
@@ -93,6 +92,6 @@
     <div class="copyright">
       <p>@Copyright All right reserved</p>
     </div>
-    <script src="main.js"></script>
+    <script src="{% static 'main.js' %}"></script>
   </body>
 </html>
